k8s/manifests/deployment.yaml
# Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-backend
  labels:
    app: blog-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-backend
  template:
    metadata:
      labels:
        app: blog-backend
    spec:
      containers:
      - name: blog-backend
        image: ankitjindal9404/my-blogs-backend
        ports:
        - containerPort: 5000 # or whatever port your backend listens to
---
# Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-frontend
  labels:
    app: blog-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-frontend
  template:
    metadata:
      labels:
        app: blog-frontend
    spec:
      containers:
      - name: blog-frontend
        image: ankitjindal9404/my-blogs-frontend
        ports:
        - containerPort: 3000 # or whatever port your frontend listens to
